# withauth/main.go
@@ -4,11 +4,15 @@ import (
 	"web-api-gin/controller"
 	"web-api-gin/docs"
 
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+var key = uuid.New()
 
 // @title           Swagger Example API - Albums
 // @version         1.0
@@ -29,16 +33,27 @@ func main() {
 	router := gin.Default()
 	ctrl := controller.NewController()
 
+	secret := []byte(key.String())
+
+	router.Use(sessions.Sessions("Authentication", sessions.NewCookieStore(secret)))
+
 	docs.SwaggerInfo.BasePath = "/api/v1"
 
 	v1 := router.Group(docs.SwaggerInfo.BasePath)
 	{
-		eg := v1.Group("/albums")
+		albums := v1.Group("/albums")
 		{
-			eg.GET("", ctrl.GetAlbums)
-			eg.GET("/:id", ctrl.GetAlbumByID)
-			eg.POST("", ctrl.PostAlbums)
-			eg.DELETE("/:id", ctrl.DeleteAlbumByID)
+			albums.GET("", ctrl.GetAlbums)
+			albums.GET("/:id", ctrl.GetAlbumByID)
+			albums.POST("", ctrl.PostAlbums)
+			albums.DELETE("/:id", ctrl.DeleteAlbumByID)
+		}
+
+		users := v1.Group("/users")
+		{
+			users.GET("", ctrl.GetUsers)
+			users.POST("", ctrl.PostUsers)
+			users.POST("/signin", ctrl.SignIn)
 		}
 	}
 
